--- a/iCareJava/src/iHealth/ui/Connexion.form
+++ b/iCareJava/src/iHealth/ui/Connexion.form
@@ -10,9 +10,6 @@
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[785, 496]"/>
     </Property>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[785, 496]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -33,12 +30,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="785" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="496" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -63,12 +60,14 @@
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="207" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
-                      <Component id="jLabel4" alignment="2" min="-2" pref="225" max="-2" attributes="0"/>
+                      <Component id="nullMessage" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="connectButton" alignment="2" min="-2" pref="241" max="-2" attributes="0"/>
                       <Component id="motDePasseField" alignment="2" pref="404" max="32767" attributes="0"/>
                       <Component id="identifiantField" alignment="2" max="32767" attributes="0"/>
                       <Component id="jLabel3" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel5" alignment="2" min="-2" pref="107" max="-2" attributes="0"/>
+                      <Component id="errorMessage" alignment="2" min="-2" pref="225" max="-2" attributes="0"/>
+                      <Component id="errorServorMessage" alignment="2" min="-2" pref="225" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="174" max="32767" attributes="0"/>
               </Group>
@@ -100,8 +99,13 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="connectButton" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="142" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="errorMessage" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="errorServorMessage" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="nullMessage" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="121" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -116,6 +120,7 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="motDePasseFieldActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="motDePasseFieldKeyPressed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="connectButton">
@@ -131,6 +136,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Se connecter"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="connectButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
@@ -187,7 +195,19 @@
             <Property name="text" type="java.lang.String" value="jLabel5"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel4">
+        <Component class="javax.swing.JLabel" name="nullMessage">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Montserrat Thin" size="12" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="33" green="33" red="0" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Veuillez identiquer un identifiant et un mot de passe"/>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="errorMessage">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Montserrat Thin" size="12" style="0"/>
@@ -196,6 +216,18 @@
               <Color blue="0" green="0" red="fd" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Identifiant ou mot de passe incorrect"/>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="errorServorMessage">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Montserrat Thin" size="12" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" red="fd" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Connexion au serveur impossible"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
