--- a/iCareJava/src/iHealth/ui/Connexion.form
+++ b/iCareJava/src/iHealth/ui/Connexion.form
@@ -65,9 +65,9 @@
                       <Component id="motDePasseField" alignment="2" pref="404" max="32767" attributes="0"/>
                       <Component id="identifiantField" alignment="2" max="32767" attributes="0"/>
                       <Component id="jLabel3" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jLabel5" alignment="2" min="-2" pref="107" max="-2" attributes="0"/>
                       <Component id="errorMessage" alignment="2" min="-2" pref="225" max="-2" attributes="0"/>
                       <Component id="errorServorMessage" alignment="2" min="-2" pref="225" max="-2" attributes="0"/>
+                      <Component id="logo" alignment="2" min="-2" pref="124" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="173" max="32767" attributes="0"/>
               </Group>
@@ -86,8 +86,8 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
-                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                  <Component id="logo" min="-2" pref="113" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -188,14 +188,6 @@
             <Property name="text" type="java.lang.String" value="iHealth."/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel5">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/iHealth/img/hospital.png"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="jLabel5"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="nullMessage">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -231,6 +223,8 @@
             <Property name="text" type="java.lang.String" value="Connexion au serveur impossible"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="logo">
         </Component>
       </SubComponents>
     </Container>
